workspace-control's kernel will be 'default' by default to comply with steps in z2c guide

--- a/control/etc/workspace-control/kernels.conf
+++ b/control/etc/workspace-control/kernels.conf
@@ -12,7 +12,7 @@ kerneldir: kernels
 #   - cannot specify absolute paths (try using symlinks instead)
 #   - first one in the list is used if kernel is not specified via service
 
-authz_kernels: fake-vmlinuz-2.6-xen
+authz_kernels: default
 
 
 # Allow supplied commandline arguments to be sent to the kernel?  Any value
