bug in initial impl of Enhancement 7065, was not disabling correctly

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -52,8 +52,9 @@ blankcreate: blankcreate.sh
 # The partition list path is configured directly at the top of the
 # "tmp-lease-alter.py" script since it is sensitive information that
 # should not be passed in by an unprivileged user.
-
-enabled: true
+#
+# When enabled is 'true' the feature is enabled.
+enabled:
 
 
 # This is the partition to 'present' to every VM for tmp space if this
