--- a/cumulus/conf/etc/cumulus.ini.in
+++ b/cumulus/conf/etc/cumulus.ini.in
@@ -9,6 +9,7 @@ calcMD5=True
 [backend]
 type=posix
 data_dir=@INSTALLDIR@/posixdata
+block_size=524288
 [security]
 type=authz
 security_dir=@INSTALLDIR@/posixauth
