--- a/cumulus/conf/etc/cumulus_tests.ini.in
+++ b/cumulus/conf/etc/cumulus_tests.ini.in
@@ -9,6 +9,8 @@ calcMD5=True
 [backend]
 type=posix
 data_dir=@INSTALLDIR@/posixdata
+block_size=524288
+
 [security]
 type=authz
 security_dir=@INSTALLDIR@/posixauth
