updates for libvirt domain socket situation

--- a/control/etc/workspace-control/libvirt.conf
+++ b/control/etc/workspace-control/libvirt.conf
@@ -12,8 +12,8 @@ vmm: xen3
 [libvirt_connections]
 
 # You should be able to connect using the "virsh" tool with these strings.
-# For example, if you are using 'xen3' and the value here is "xen:///" you
-# should test a command like "virsh -c xen:///"
+# For example, if you are using 'xen3' and the value here is "xen+unix:///" you
+# should test a command like "virsh -c xen+unix:///"
 #
 # See the libvirt documentation and adjust this connection string for your
 # particular situation.  You cannot use workspace-control if that command
@@ -27,8 +27,11 @@ vmm: xen3
 # The workspace-control tool uses a more direct connection to libvirt but if
 # the virsh tool is working with the connection string configured here then
 # that should mean workspace-control will as well.
+#
+# Both the read and write permissions can be tested using the 'sbin' scripts
+# that the zero to cloud guide will have you use.
 
-xen3: xen:///
+xen3: xen+unix:///
 kvm0: qemu:///system
 
 
