--- a/cumulus/conf/Makefile.in
+++ b/cumulus/conf/Makefile.in
@@ -502,6 +502,7 @@ install: predest
 	cp -r $(cumulus_src_dir)/etc $(cumulus_dst_dir)
 	cp -r $(cumulus_src_dir)/etc/env.sh $(cumulus_dst_dir)
 	$(SQLITE) $(AUTHZDB) < $(cumulus_src_dir)/etc/acl.sql
+	chmod 600 $(AUTHZDB)
 	echo "done"
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
