patch for passthrough of alternative schemes

--- a/service/service/java/source/etc/workspace-service/global-policies.conf
+++ b/service/service/java/source/etc/workspace-service/global-policies.conf
@@ -69,9 +69,19 @@ termination.offset.seconds=600
 allow.static.addresses=false
 
 
+# POLICY: allow.other.schemes
+#
+# If 'true' this allows clients to use file URL schemes other than "cumulus://" or
+# "file://" and it leaves it up to workspace-control or other special mechanisms
+# (like "allowed.http.hosts" configuration below) to decide on authorization question.
+
+allow.other.propagation.schemes=false
+
 # POLICY: allowed.http.hosts
 #
 # This is a list of hosts that the users are allowed to propagate images from 
-# via http propagation. This should be a comma separated list. 
+# via http propagation. This should be a comma separated list.
+#
+# If http is desired, "allow.other.propagation.schemes" above must be enabled.
 
 allowed.http.hosts=
