--- a/service/service/java/source/etc/workspace-service/global-policies.conf
+++ b/service/service/java/source/etc/workspace-service/global-policies.conf
@@ -71,11 +71,13 @@ allow.static.addresses=false
 
 # POLICY: allow.other.schemes
 #
-# If 'true' this allows clients to use file URL schemes other than "cumulus://" or
-# "file://" and it leaves it up to workspace-control or other special mechanisms
-# (like "allowed.http.hosts" configuration below) to decide on authorization question.
+# If 'true' this allows clients to use file URL schemes other than "cumulus://"
+# or file://" for images.  It leaves it up to workspace-control or other special
+# mechanisms (like "allowed.http.hosts" configuration below) to decide on
+# the authorization question.
 
-allow.other.propagation.schemes=false
+allow.other.schemes=false
+
 
 # POLICY: allowed.http.hosts
 #
