force JDK 1.5 classes

--- a/authzdb/build.xml
+++ b/authzdb/build.xml
@@ -57,6 +57,8 @@
         <javac srcdir="${nimbus.authz.main.src.dir}"
                destdir="${nimbus.authz.main.build.dest}"
                classpathref="nimbus.authz.main.classpath"
+               source="1.5"
+               target="1.5"
                debug="on">
 
             <include name="**/*.java"/>
