--- a/autoconfiguration/build.xml
+++ b/autoconfiguration/build.xml
@@ -173,6 +173,8 @@
                destdir="${nimbus.autoconfig.gt4_0.build.dest}"
                classpathref="nimbus.autoconfig.gt4_0.classpath"
                includeantruntime="false"
+               source="1.5"
+               target="1.5"
                debug="on">
 
             <include name="**/*.java"/>
