--- a/messaging/gt4.0/java/common/build.xml
+++ b/messaging/gt4.0/java/common/build.xml
@@ -72,6 +72,8 @@
                destdir="${nimbus.messaging.gt4_0.common.build.dest}"
                classpathref="nimbus.messaging.gt4_0.common.classpath"
                includeantruntime="false"
+               source="1.5"
+               target="1.5"
                debug="on">
 
             <include name="**/*.java"/>
