--- a/messaging/gt4.0/java/stubs/build.xml
+++ b/messaging/gt4.0/java/stubs/build.xml
@@ -227,6 +227,8 @@
         <javac srcdir="${vws.gt4_0.stubs.build.src.dir}"
                destdir="${vws.gt4_0.stubs.build.dest}"
                includeantruntime="false"
+               source="1.5"
+               target="1.5"
                debug="on">
             
             <include name="**/*.java"/>
