--- a/messaging/query/java/source/build.xml
+++ b/messaging/query/java/source/build.xml
@@ -89,6 +89,8 @@
                destdir="${nimbus.messaging.query.build.dest}"
                classpathref="nimbus.messaging.query.classpath"
                includeantruntime="false"
+               source="1.5"
+               target="1.5"
                debug="on">
 
             <include name="**/*.java"/>
