--- a/messaging/gt4.0-elastic/java/stubs/build.xml
+++ b/messaging/gt4.0-elastic/java/stubs/build.xml
@@ -173,6 +173,8 @@
         <javac srcdir="${vws.gt4_0-elastic.stubs.build.src.dir}"
                destdir="${vws.gt4_0-elastic.stubs.build.dest}"
                includeantruntime="false"
+               source="1.5"
+               target="1.5"
                debug="on">
 
             <include name="**/*.java"/>
