--- a/service/client/java/source/build.xml
+++ b/service/client/java/source/build.xml
@@ -174,6 +174,8 @@
                destdir="${nimbus.client.gt4_0.build.dest}"
                classpathref="nimbus.client.gt4_0.classpath"
                includeantruntime="false"
+               source="1.5"
+               target="1.5"
                debug="on">
 
             <include name="**/*.java"/>
