new developer script: scripts/jars-build-and-install.sh

--- a/ctx-broker/build.xml
+++ b/ctx-broker/build.xml
@@ -135,6 +135,20 @@
 
 
     <!-- *******************************************************************
+         DEPLOY ONLY JARS (development target)
+         ******************************************************************* -->
+
+    <target name="justjars" depends="jar">
+        <echo message="Copying JARs: ${basedir}" />
+        <copy todir="${gt4_0.lib.dir}" >
+            <fileset dir="${nimbus.ctxbroker.dist.dir}">
+                  <include name="*.jar"/>
+            </fileset>
+        </copy>
+    </target>
+
+
+    <!-- *******************************************************************
          GAR RELATED
          ******************************************************************* -->
 
