--- a/service/client/java/source/build.xml
+++ b/service/client/java/source/build.xml
@@ -209,6 +209,18 @@
 
 
     <!-- *******************************************************************
+         DEPLOY ONLY JARS (development target)
+         ******************************************************************* -->
+
+    <target name="justjars" depends="jar, lib_copies">
+        <echo message="Copying JARs: ${basedir}" />
+        <copy todir="${gt4_0.lib.dir}" >
+              <fileset refid="garjars" />
+        </copy>
+    </target>
+
+
+    <!-- *******************************************************************
          CLEAN
          ******************************************************************* -->
 
