--- a/autoconfiguration/build.xml
+++ b/autoconfiguration/build.xml
@@ -255,6 +255,18 @@
         </echo>
     </target>
 
+    
+    <!-- *******************************************************************
+         DEPLOY ONLY JARS (development target)
+         ******************************************************************* -->
+
+    <target name="justjars" depends="jar, lib_copies">
+        <echo message="Copying JARs: ${basedir}" />
+        <copy todir="${gt4_0.lib.dir}" >
+              <fileset refid="garjars" />
+        </copy>
+    </target>
+
 
     <!-- *******************************************************************
          DEPLOYMENT
