--- a/messaging/query/java/source/etc/query/query.conf
+++ b/messaging/query/java/source/etc/query/query.conf
@@ -2,8 +2,7 @@
 # Configuration file for EC2 Query API interface to Nimbus
 ####################################################################
 
-# EC2 query interface is disabled by default. You must configure 
-# the keystore information below before enabling.
+# EC2 query interface is enabled by default.
 query.enabled=true
 
 # port number of HTTPS server.  There is no option to use non-HTTPS.  
@@ -17,7 +16,7 @@ keystore.path=$NIMBUS_HOME/var/keystore.jks
 # password of java keystore specified above.
 # Note: You can change this password if you like, but it practice it doesn't
 # usually matter because the keystore is stored alongside an unencrypted
-# PEM version of the same key. Just ensure that each of these files
+# PEM version of the same key. Just ensure that the keystore and pem files
 # are only readable by the Nimbus user.
 #
 keystore.password=changeit
