--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/cumulus.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/cumulus.conf
@@ -5,4 +5,4 @@ cumulus.authz.db=$NIMBUS_HOME/cumulus/etc/authz.db
 cumulus.repo.dir=$NIMBUS_HOME/cumulus/posixdata
 cumulus.host=
 cumulus.repo.bucket=Repo
-cumulus.repo.prefix=VM
+cumulus.repo.prefix=VMS
