--- a/service/service/java/tests/suites/spotinstances/noresources/home/services/etc/nimbus/workspace-service/global-policies.conf
+++ b/service/service/java/tests/suites/spotinstances/noresources/home/services/etc/nimbus/workspace-service/global-policies.conf
@@ -67,3 +67,23 @@ termination.offset.seconds=600
 # per-use if one justs wants to limit all static IP use
 
 allow.static.addresses=false
+
+
+# POLICY: allow.other.schemes
+#
+# If 'true' this allows clients to use file URL schemes other than "cumulus://"
+# or file://" for images.  It leaves it up to workspace-control or other special
+# mechanisms (like "allowed.http.hosts" configuration below) to decide on
+# the authorization question.
+
+allow.other.schemes=false
+
+
+# POLICY: allowed.http.hosts
+#
+# This is a list of hosts that the users are allowed to propagate images from 
+# via http propagation. This should be a comma separated list.
+#
+# If http is desired, "allow.other.propagation.schemes" above must be enabled.
+
+allowed.http.hosts=
