--- a/service/service/java/tests/suites/spotinstances/noresources/home/services/etc/nimbus/workspace-service/network.conf
+++ b/service/service/java/tests/suites/spotinstances/noresources/home/services/etc/nimbus/workspace-service/network.conf
@@ -17,5 +17,15 @@
 # of 2, 6, A or E"
 #
 # Setting a too-long prefix will limit the amount of IPs you can support.
+#
+# MAC addresses can also be explictly assigned in the network-pool files.
+# Explicit MACs do not need to start with this prefix.
 
 mac.prefix=A2:AA:BB
+
+# Network to choose netsample IP and MAC from. This is only generally used
+# when you are first installing Nimbus and attempting to get correct network
+# bridging working on your VMM. Specifying an invalid or empty network here
+# will result in the netsample file not being written.
+
+netsample.network=public
