Removed default vws.cahash from cloud.properties
Only used for --security and doesn't make sense to
have a default.

--- a/service/client/java/source/src/org/globus/workspace/cloud/client/default.properties
+++ b/service/client/java/source/src/org/globus/workspace/cloud/client/default.properties
@@ -23,6 +23,9 @@
 # [[ Has no default here ]]
 #vws.repository.identity=
 
+# CA hash of target cloud
+# [[ Has no default here ]]
+#vws.cahash=
 
 # Default ms between polls
 vws.poll.interval=2000
@@ -35,9 +38,6 @@ vws.memory.request=3584
 
 # Image repository base directory
 vws.repository.basedir=/cloud/
-
-# CA hash of target cloud
-vws.cahash=6045a439
 
 # propagation setup for cloud
 vws.propagation.scheme=scp
