--- a/service/service/java/tests/suites/spotinstances/noresources/home/services/etc/nimbus/workspace-service/spotinstances.conf
+++ b/service/service/java/tests/suites/spotinstances/noresources/home/services/etc/nimbus/workspace-service/spotinstances.conf
@@ -1,8 +1,10 @@
-################################################################################
+######################################################
 #
-# This file is used for configuring Spot Instances within this site
+# This file is used for configuring asynchronous
+# requests (Spot Instances and
+# backfill requests) for this site
 #
-################################################################################
+######################################################
 
 ###########################
 # GENERAL CONFIGURATION:
@@ -12,6 +14,11 @@
 # is enabled (true) or disabled (false) for this site
 
 si.enabled=true
+
+# Indicates whether the backfill feature
+# is enabled (true) or disabled (false) for this site
+
+backfill.enabled=true
 
 # A pricing model is invoked every time the Spot Instances
 # environment changes. This can happen in many situations:
@@ -36,19 +43,19 @@ si.enabled=true
 # Currently there are two default implementations of that
 # interface, explained as follows:
 #
-# ** org.globus.workspace.spotinstances.MaximizeUtilizationPricingModel **
+# ** org.globus.workspace.async.pricingmodel.MaximizeUtilizationPricingModel **
 #
 # This pricing model aims to satisfy the maximum number of requests, giving
 # priority to higher bid requests when there aren't available VMs to fulfill
 # all requests. Suitable for scientific clouds.
 #
-# ** org.globus.workspace.spotinstances.MaximizeProfitPricingModel **
+# ** org.globus.workspace.async.pricingmodel.MaximizeProfitPricingModel **
 #
 # This pricing model aims to maximize the revenue of the cloud provider,
 # without necessarily increasing cloud utilization. Suitable for commercial
 # clouds.
 
-si.pricingmodel=org.globus.workspace.spotinstances.MaximizeUtilizationPricingModel
+si.pricingmodel=org.globus.workspace.async.pricingmodel.MaximizeUtilizationPricingModel
 
 ####################################
 # BASIC SPOT INSTANCE CONFIGURATION:
@@ -71,26 +78,29 @@ si.basic.minprice=0.1
 
 # The policies below define how the total resource pool memory is    #
 # divided between ordinary Workspace Service requests                # 
-# (1st class requests) and Spot Instance requests (SI requests).     #
+# (1st class requests) and Asynchronous requests (SI or backfill     #
+# requests).                                                         #
 #                                                                    #
 # It's important to note that these policies are preventive, in the  #
 # sense that free space is reserved for future 1st class requests,   #
 # but if the reserved space is still not sufficient to satisfy  a    #
-# 1st class request, SI requests will be pre-empted on-the-fly in    #
-# order to free the needed amount of space (emergency pre-emption)   #
+# 1st class request, SI or backfill requests will be pre-empted      #
+# on-the-fly in order to free the needed amount of space (emergency  #
+# pre-emption)                                                       #
 
 # This policy defines the minimum amount of free memory (in MegaBytes) 
 # that should be reserved exclusively for 1st class requests, and thus
-# will not be allocated for SI requests.
+# will not be allocated for SI or backfill requests.
 
-si.policies.minreservedmem=256
+async.policies.minreservedmem=256
 
 # This policy defines the maximum utilization (in %) for
-# 1st class requests. When the utilization raises above that
-# value, Spot Instance requests are pre-empted	(preventive pre-emption)
-# in order to decrease the utilization of 1st class requests.
+# 1st class requests. When the utilization raises above this
+# value, Spot Instance or backfill requests are pre-empted	
+# (preventive pre-emption) in order to decrease the 
+# utilization of 1st class requests.
 #
-# The Spot Instances module will reserve an amount of free 
+# The Workspace Service will reserve an amount of free 
 # memory for 1st class requests in order to ensure that
 # the utilization of 1st class requests is equal or below 
 # that value, unless there is no  more available memory 
@@ -101,8 +111,8 @@ si.policies.minreservedmem=256
 #
 #  * maxUtilization = usedMem / (usedMem + reservedMem)
 #
-# that, if reorganized becomes:
+# reorganized, becomes:
 #
 # * reservedMem = (1 - maxUtilization)*usedMem/maxUtilization
 
-si.policies.maxutilization=0.7
+async.policies.maxutilization=0.7
