updated ec2 schema from v2009_08_15 to v2010_06_15

--- a/messaging/gt4.0-elastic/java/stubs/NStoPkg.properties
+++ b/messaging/gt4.0-elastic/java/stubs/NStoPkg.properties
@@ -1,2 +1,3 @@
 http\://ec2.amazonaws.com/doc/2008-05-05/=org.nimbustools.messaging.gt4_0_elastic.generated.v2008_05_05
 http\://ec2.amazonaws.com/doc/2009-08-15/=org.nimbustools.messaging.gt4_0_elastic.generated.v2009_08_15
+http\://ec2.amazonaws.com/doc/2010-06-15/=org.nimbustools.messaging.gt4_0_elastic.generated.v2010_06_15
