changed si.basic.mem property to si.instancetype (small, large, xlarge) in spotinstances.conf file

--- a/service/service/java/source/etc/workspace-service/spotinstances.conf
+++ b/service/service/java/source/etc/workspace-service/spotinstances.conf
@@ -61,15 +61,24 @@ si.pricingmodel=org.globus.workspace.async.pricingmodel.MaximizeUtilizationPrici
 # BASIC SPOT INSTANCE CONFIGURATION:
 ####################################
 
-# Defines the amount of memory (in MegaBytes) that
-# a Spot Instance of the basic type has
+# Defines the instance type that will become
+# available as spot instances
+# 
+# The supported instance types are:
+# small, large and xlarge.
+#
+# The amount of memory for each instance type
+# is defined in the elastic.conf file.
+#
+# Currently, Nimbus only supports one type
+# of Spot Instance type per site.
 
-si.basic.mem=128
+si.instancetype=small
 
 # Defines the minimum price (in allocation units) per minute
-# that a Spot Instance of the basic type can cost
+# that a Spot Instance can cost
 
-si.basic.minprice=0.1
+si.minprice=0.1
 
 
 #############################
