fixed SI type bug in DefaultResourceAllocations and improved spotinstances.conf file

--- a/service/service/java/source/etc/workspace-service/spotinstances.conf
+++ b/service/service/java/source/etc/workspace-service/spotinstances.conf
@@ -1,14 +1,16 @@
 ######################################################
-#
-# This file is used for configuring asynchronous
-# requests (Spot Instances and
-# backfill requests) for this site
-#
+#                                                    #
+# This file is used for configuring asynchronous     #
+# requests (Spot Instances and                       #
+# backfill requests) for this site                   #
+#                                                    #
 ######################################################
 
-###########################
-# GENERAL CONFIGURATION:
-###########################
+################################################################################
+#
+# General settings
+#
+################################################################################
 
 # Indicates whether the Spot Instances feature
 # is enabled (true) or disabled (false) for this site
@@ -19,6 +21,12 @@ si.enabled=true
 # is enabled (true) or disabled (false) for this site
 
 backfill.enabled=true
+
+################################################################################
+#
+# Spot Instances settings
+#
+################################################################################
 
 # A pricing model is invoked every time the Spot Instances
 # environment changes. This can happen in many situations:
@@ -57,21 +65,17 @@ backfill.enabled=true
 
 si.pricingmodel=org.globus.workspace.async.pricingmodel.MaximizeUtilizationPricingModel
 
-####################################
-# BASIC SPOT INSTANCE CONFIGURATION:
-####################################
-
 # Defines the instance type that will become
 # available as spot instances
 # 
-# The supported instance types are:
+# Supported instance types are:
 # small, large and xlarge.
 #
 # The amount of memory for each instance type
 # is defined in the elastic.conf file.
 #
-# Currently, Nimbus only supports one type
-# of Spot Instance type per site.
+# Currently, Nimbus supports only one
+# Spot Instance type per site.
 
 si.instancetype=small
 
@@ -81,9 +85,11 @@ si.instancetype=small
 si.minprice=0.1
 
 
-#############################
-# MEMORY MANAGEMENT POLICIES:
-#############################
+################################################################################
+#
+# Memory Management Policies
+#
+################################################################################
 
 # The policies below define how the total resource pool memory is    #
 # divided between ordinary Workspace Service requests                # 
