--- a/service/service/java/source/etc/workspace-service/spotinstances.conf
+++ b/service/service/java/source/etc/workspace-service/spotinstances.conf
@@ -42,7 +42,7 @@ backfill.enabled=true
 # bid is below the current spot price.
 #
 # This property defines which implementation of the 
-# org.globus.workspace.spotinstances.PricingModel
+# org.globus.workspace.async.spotinstances.PricingModel
 # interface should be used by the Spot Instances module
 # to set the spot price. This class will be constructed
 # by reflection, so it must be in the classpath of the
