should be good for a test run

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -64,3 +64,7 @@ caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 # Absolute path to directory with any disk/SSH based notification sinks
 
 msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
+
+virga.fetch.path=$NIMBUS_HOME/virga/fetch.sh
+
+
