--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -65,6 +65,6 @@ caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 
 msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
-virga.fetch.path=$NIMBUS_HOME/virga/fetch.sh
+virga.fetch.path=$NIMBUS_HOME/virga/bin/virga-request
 
 
