adding a new test

--- a/virga/etc/virga.ini
+++ b/virga/etc/virga.ini
@@ -2,8 +2,7 @@
 password=nimbus
 
 [log]
-file=/home/bresnaha/virga.log
+file=@VIRGA_HOME@/log/virga.log
 level=debug
 [db]
-file=/home/bresnaha/Dev/Nimbus/nimbus/virga/req.db
-
+file=@VIRGA_HOME@/etc/req.db
