--- a/lantorrent/etc/virga.ini
+++ b/lantorrent/etc/virga.ini
@@ -2,7 +2,7 @@
 password=nimbus
 
 [log]
-file=@VIRGA_HOME@/log/virga.log
+file=@LANTORRENT_HOME@/log/lantorrent.log
 level=debug
 [db]
-file=@VIRGA_HOME@/etc/req.db
+file=@LANTORRENT_HOME@/etc/req.db
