--- a/lantorrent/etc/lantorrent.inet.in
+++ b/lantorrent/etc/lantorrent.inet.in
@@ -4,13 +4,14 @@
 # to the originating source the time in seconds since midnight on January first
 # 1900.
 # This is the tcp version.
-service lantorrent
+service @SERVICENAME@
 {
+    type        = UNLISTED
 	disable		= no
 	socket_type	= stream
 	protocol	= tcp
 	user		= bresnaha
 	wait		= no
-    port = 9765
-    server      = /home/bresnaha/Dev/Nimbus/nimbus/lantorrent/bin/lt.sh
+    port = @PORT@
+    server      = @LANTORRENT_HOME@/bin/lt.sh
 }                                                                               
