allow specification of ip address in conf file

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -43,4 +43,8 @@ http: false
 
 lantorrent: true
 lantorrentport: 5893
+
+# if lantorrentip is not specified the then 
+# socket.gethostbyname(socket.gethostname()) will be used
+#lantorrentip: x.x.x.x
 ssh: /usr/bin/ssh
