--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -43,8 +43,8 @@ http: false
 
 lantorrent: true
 lantorrentport: 5893
-
-# if lantorrentip is not specified the then 
-# socket.gethostbyname(socket.gethostname()) will be used
+# if lantorrentip is not specified the then it will be assumed that the 
+# request program is being run from ssh and the contact information will
+# come from the SSH_CLIENT env
 #lantorrentip: x.x.x.x
 ssh: /usr/bin/ssh
