changing how arguments get to lantorrent adapter.  is generally useful for any propagation adapter.  we can want to figure out a way to sub in envs

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -48,3 +48,4 @@ lantorrentport: 2893
 # come from the SSH_CLIENT env
 #lantorrentip: x.x.x.x
 ssh: /usr/bin/ssh
+lantorrentexe: /opt/nimbus/bin/ltclient.sh
