--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -65,6 +65,4 @@ caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 
 msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
-lantorrent.fetch.path=$NIMBUS_HOME/lantorrent/bin/lt-request
-
-
+# propagate.extraargs=$NIMBUS_HOME/lantorrent/bin/lt-request
