added new logging options

--- a/lantorrent/etc/lt.ini
+++ b/lantorrent/etc/lt.ini
@@ -2,7 +2,7 @@
 password=nimbus
 
 [log]
-file=@LANTORRENT_HOME@/log/lantorrent.log
+file=@LANTORRENT_HOME@/log/lantorrent.@PGM@.log
 level=debug
 [db]
 file=@LANTORRENT_HOME@/etc/req.db
