pushing in public user name in a more convenient way

--- a/service/service/java/source/etc/workspace-service/cumulus.conf
+++ b/service/service/java/source/etc/workspace-service/cumulus.conf
@@ -6,3 +6,4 @@ cumulus.repo.dir=$NIMBUS_HOME/cumulus/posixdata
 cumulus.host=
 cumulus.repo.bucket=Repo
 cumulus.repo.prefix=VMS
+cumulus.publicuser=CumulusPublicUser
