--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -30,7 +30,7 @@ http: false
 
 
 # Hadoop Distributed File System (hdfs)
-# Make this point to the hadoop executable of your install.  Enviroment 
+# Make this point to the hadoop executable of your install.  Environment
 # variables of the form $var and ${var} will be expanded if possible.
 #
 # Advanced feature, uncomment to enable.
@@ -43,7 +43,7 @@ http: false
 
 lantorrent: true
 lantorrentport: 2893
-# if lantorrentip is not specified the then it will be assumed that the 
+# if lantorrentip is not specified then it will be assumed that the
 # request program is being run from ssh and the contact information will
 # come from the SSH_CLIENT env
 #lantorrentip: x.x.x.x
