Admin remoting client/server config cleanup

--- a/service/service/java/source/etc/workspace-service/admin.conf
+++ b/service/service/java/source/etc/workspace-service/admin.conf
@@ -3,6 +3,8 @@
 # This file contains configuration values for administrative CLI tools that
 # hook into the running service
 #
+# This file is read by both the Nimbus service and the administrative client
+#
 ################################################################################
 
 
@@ -18,16 +20,16 @@ node.networks.default=*
 node.pool.default=default
 
 
-################################################################################
-# Settings for connecting to the running service via Unix domain sockets.
-# These likely should not be changed.
-################################################################################
-
-
 # Directory for socket connections to the running service. This directory
 # should exist before the service is started and must have locked down permissions
 # for the Nimbus user. 700 is recommended.
 socket.dir=$NIMBUS_HOME/var/run/privileged/
 
-# name used for binding the NodePool implementation class
-rmi.binding.nodepool=nodepool
+
+################################################################################
+# Settings for binding and resolving remoted classes at runtime.
+# These likely should not be changed.
+################################################################################
+
+# name used for binding the VMM node management implementation
+rmi.binding.nodemgmt=nodemgmt
