Make LANTorrent config optional via 'true' value

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -41,7 +41,9 @@ http: false
 
 #hdfs: /usr/bin/hadoop
 
-lantorrent: true
+# Set to 'true' to enable LANTorrent
+lantorrent: false
+
 lantorrentport: 2893
 # if lantorrentip is not specified then it will be assumed that the
 # request program is being run from ssh and the contact information will
