necessary suites.basic changes

--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/spotinstances.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/spotinstances.conf
@@ -1,14 +1,16 @@
 ######################################################
-#
-# This file is used for configuring asynchronous
-# requests (Spot Instances and
-# backfill requests) for this site
-#
+#                                                    #
+# This file is used for configuring asynchronous     #
+# requests (Spot Instances and                       #
+# backfill requests) for this site                   #
+#                                                    #
 ######################################################
 
-###########################
-# GENERAL CONFIGURATION:
-###########################
+################################################################################
+#
+# General settings
+#
+################################################################################
 
 # Indicates whether the Spot Instances feature
 # is enabled (true) or disabled (false) for this site
@@ -19,6 +21,12 @@ si.enabled=true
 # is enabled (true) or disabled (false) for this site
 
 backfill.enabled=true
+
+################################################################################
+#
+# Spot Instances settings
+#
+################################################################################
 
 # A pricing model is invoked every time the Spot Instances
 # environment changes. This can happen in many situations:
@@ -34,7 +42,7 @@ backfill.enabled=true
 # bid is below the current spot price.
 #
 # This property defines which implementation of the 
-# org.globus.workspace.spotinstances.PricingModel
+# org.globus.workspace.async.spotinstances.PricingModel
 # interface should be used by the Spot Instances module
 # to set the spot price. This class will be constructed
 # by reflection, so it must be in the classpath of the
@@ -57,21 +65,17 @@ backfill.enabled=true
 
 si.pricingmodel=org.globus.workspace.async.pricingmodel.MaximizeUtilizationPricingModel
 
-####################################
-# BASIC SPOT INSTANCE CONFIGURATION:
-####################################
-
 # Defines the instance type that will become
 # available as spot instances
 # 
-# The supported instance types are:
+# Supported instance types are:
 # small, large and xlarge.
 #
 # The amount of memory for each instance type
 # is defined in the elastic.conf file.
 #
-# Currently, Nimbus only supports one type
-# of Spot Instance type per site.
+# Currently, Nimbus supports only one
+# Spot Instance type per site.
 
 si.instancetype=small
 
@@ -81,9 +85,11 @@ si.instancetype=small
 si.minprice=0.1
 
 
-#############################
-# MEMORY MANAGEMENT POLICIES:
-#############################
+################################################################################
+#
+# Memory Management Policies
+#
+################################################################################
 
 # The policies below define how the total resource pool memory is    #
 # divided between ordinary Workspace Service requests                # 
@@ -101,7 +107,7 @@ si.minprice=0.1
 # that should be reserved exclusively for 1st class requests, and thus
 # will not be allocated for SI or backfill requests.
 
-async.policies.minreservedmem=256
+async.policies.minreservedmem=2048
 
 # This policy defines the maximum utilization (in %) for
 # 1st class requests. When the utilization raises above this
