some of the necessary suites.spotinstances changes

--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/other/common.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/other/common.conf
@@ -21,7 +21,7 @@ fake.mode=true
 # Setting this to zero or removing the configuration triggers immediate
 # notifications of (fake) completion.  Milliseconds.
 
-fake.lag.ms=500
+fake.lag.ms=50
 
 
 
@@ -65,4 +65,5 @@ caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 
 msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
-
+#propagate.extraargs=$NIMBUS_HOME/lantorrent/bin/lt-request
+propagate.extraargs=
