--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/group-authz/group01.properties
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/group-authz/group01.properties
@@ -14,6 +14,9 @@ vws.group.authz.maxReservedMinutes=300
 # the all-time maximum usage cap.
 vws.group.authz.maxElapsedReservedMinutes=300
 
+# Maximum number of CPUs per VM instance
+vws.group.authz.maxCPUs=2
+
 # Maximum number of running workspaces at one point in time
 vws.group.authz.maxWorkspaceNumber=5
 
