increase signal/noise in test output

--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/logging.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/logging.conf
@@ -92,7 +92,7 @@ log.accounting=off
 #
 # Traces state transitions and task dispatch
 
-log.state=on
+log.state=off
 
 
 # GENERAL TRACE
@@ -100,14 +100,14 @@ log.state=on
 # General trace, logs many method invocations as well as some small details
 # in many classes (low signal/noise)
 
-log.trace=on
+log.trace=off
 
 
 # DB
 #
 # Traces persistence interactions (low signal/noise)
 
-log.db=on
+log.db=off
 
 
 
