Added multiple-subnet support to metadata server

--- a/service/service/java/source/etc/workspace-service/metadata.conf
+++ b/service/service/java/source/etc/workspace-service/metadata.conf
@@ -20,10 +20,34 @@
 listen=false
 
 
-# host:port
-# This must be an address or hostname that is recognized on the VMs.
+# The metadata server can listen on multiple interfaces. However each VM must
+# be provided a contact address it can route to directly, *without* going
+# through a NAT. This is because authorization is done by source IP.
 
-contact.socket=1.2.3.4:80
+# In situations where there is no common interface that all networks can route
+# to, you must provide specific contact addresses for each VM network. This
+# means your service node must have an interface for each contact address.
+
+# Understand that these settings control two things: (1) which interfaces/ports
+# the metadata server binds to, and (2) what contact address is injected into
+# each VM.
+
+
+# If you specify *only* this setting, all VMs will be given this address.
+# If you also include specific network contact sockets below, this address
+# will be given to VMs that do not have a presence on one of the explicit
+# networks. This value can be 0.0.0.0 as long as you have entries for each
+# VM network below. You can also comment this line out
+contact.socket=1.2.3.4:8080
+
+
+# These are per-network contact addresses. If a VM has a presence on more than
+# one of these networks, the first network in the request will be used. If a VM
+# has a presence on none of these networks, the default contact.socket above
+# will be used if present.
+
+contact.socket.public=1.2.3.4:8080
+contact.socket.private=10.0.3.4:8080
 
 
 # List of network names for "public-ipv4" queries.  i.e., which pool did the
