Add https pulling with x509 credential to workspace control

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -28,6 +28,10 @@ scp: /usr/bin/scp
 # has a configuration for the allowed hostnames that may be pulled from.
 http: false
 
+# Set this to 'true' to enable https based propagation.  The service node
+# has a configuration for the allowed hostnames that may be pulled from.
+# This allows you to authenticate with the server with an x509 credential.
+https: false
 
 # Hadoop Distributed File System (hdfs)
 # Make this point to the hadoop executable of your install.  Environment
