SI/backfill: persistence, deadlocks, and configuration issues.

--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/other/other-elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/other/other-elastic.conf
@@ -67,3 +67,5 @@ ra.name.unknown=[unknown]
 unknown.pubnet=[unknown]
 unknown.privnet=[unknown]
 
+# disk-persistent caching
+caches.dir=$NIMBUS_HOME/services/var/nimbus/elastic-caches
