--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -56,7 +56,7 @@ derby.home.dir=$NIMBUS_HOME/services/var
 persistence.dir=$NIMBUS_HOME/services/var/nimbus
 
 
-# Absolute path to directory with any disk-persistent caches
+# Absolute path to directory for elastic disk-persistent caches
 
 caches.dir=$NIMBUS_HOME/services/var/nimbus/caches
 
