--- a/service/service/java/source/etc/workspace-service/spotinstances.conf
+++ b/service/service/java/source/etc/workspace-service/spotinstances.conf
@@ -12,15 +12,10 @@
 #
 ################################################################################
 
-# Indicates whether the Spot Instances feature
-# is enabled (true) or disabled (false) for this site
+# Indicates whether the backfill feature is enabled (true) or disabled (false)
+# for this site.  See backfill.conf
 
-si.enabled=true
-
-# Indicates whether the backfill feature
-# is enabled (true) or disabled (false) for this site
-
-backfill.enabled=true
+backfill.enabled=false
 
 ################################################################################
 #
