--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/backfill.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/backfill.conf
@@ -20,11 +20,7 @@
 
 # BACKFILL
 #
-# If you would like to use backfill, you can enable it here.
-#
-# The default is disabled.
-
-backfill.disabled=true
+# If you would like to use backfill, you can enable it in spotinstances.conf
 
 
 # MAX INSTANCES
@@ -33,7 +29,10 @@ backfill.disabled=true
 # if it is enabled. If there is not enough space on the cloud for the maximum
 # number of instances it will deploy as many as it can. For example, if max
 # instances is set to 12 on a 16 node cloud but there are 10 active user VMs
-# then backfill will still launch 6 backfill nodes.
+# then backfill will still launch 6 backfill nodes.  If the spot instances
+# settings have space reserved for regular requests (see the spotinstances.conf
+# 'minreservedmem' and 'maxutilization' configurations), these backfill requests
+# will be subject to that as well, so the site will not fill up completely.
 #
 # If max instances is set to 0 then backfill will use all idle VMMs.
 #
