--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/elastic/other/other-elastic.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/elastic/other/other-elastic.conf
@@ -67,3 +67,5 @@ ra.name.unknown=[unknown]
 unknown.pubnet=[unknown]
 unknown.privnet=[unknown]
 
+# disk-persistent caching
+caches.dir=$NIMBUS_HOME/services/var/nimbus/elastic-caches
